baculum: Add estimated job values endpoint that uses job historical data for estimation
